# vetfkernel

./: CMakeLists.txt  Doxyfile  README.md  perf.py  test.sh  ve2vel.py
doc/: perf.md
perfdb/: 2019-12-11T08:00:37+0000  2019-12-17T09:12:31+0000  2019-12-23T08:36:35+0000
src/: CMakeLists.txt  argmax.cc  avgpooling.cc  batch_matmul.cc  binary_ops.cc  broadcast_to.cc  conv2d.cc  conv2d_backprop_filter.cc  conv2d_backprop_input.cc  cwise_ops_gradients.cc  dense_update_functor.cc  depthwise_conv.cc  einsum_functor.cc  fill_functor.cc  fused_batch_norm.cc  gather_functor.cc  libvetfkernel.cc  log.h  maxpooling.cc  maxpooling_backprop.cc  ops.cc  pad.cc  reduction_ops.cc  relu.cc  reverse.cc  scatter_functor.cc  segment_reduction_ops.cc  sparse_xent_ops.cc  training_ops.cc  unary_ops.cc  ve_ops.cc  ve_ops_common.h  vml.cc  vml.h
src/intrinsic/: Add.c  ApplyAdam.c  BiasAdd.c  BiasAddGrad.c  CMakeLists.txt  Div.c  Mean.c  Mul.c  Neg.c  Rsqrt.c  Sqrt.c  Square.c  Sub.c  Sum.c  Tile.c  Transpose.c  libvetfkernel.h  libvetfkernel_Mean.c  libvetfkernel_Neg.c
test/: CMakeLists.txt  batch_matmul.cc  bench.cc  biasAdd.cc  conv2d.cc  matmul.cc  pad.cc  reduction.cc  relu.cc  test.h  test01.cc  test_binary_ops.cc
test/python/: avgpoolgrad.py
vml/: README.md
vml/include/: vml.h
vml/include/vml/: profile.h  types.h
vml/src/: CMakeLists.txt  asl.cc  avgpooling.cc  batch_matmul.cc  biasAdd.cc  binary_ops.cc  conv2d.cc  conv2d_backprop_filter.cc  conv2d_backprop_input.cc  fused_batch_norm.cc  pad.cc  randomUniform.cc  reduction.cc  relu.cc  tile.cc  training_ops.cc  unary_ops.cc  vml.cc
vml/src/intrinsic/: Add.c  ApplyAdam.c  BiasAdd.c  CMakeLists.txt  Div.c  Mul.c  Neg.c  Rsqrt.c  Sqrt.c  Square.c  Sub.c  Tile.c  intrinsic.h
